--- a/q/274018.html
+++ b/q/274018.html
@@ -26,18 +26,49 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>030</td><td>sed r</td><td>240708T164928Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274026#274026">guest430</a></td></tr>
-<tr d-ix="1"><td>051</td><td>JavaScript ES6</td><td>240708T161437Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274023#274023">Arnauld</a></td></tr>
-<tr d-ix="2"><td>031</td><td>Perl 5 p</td><td>240708T162921Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274024#274024">Xcali</a></td></tr>
-<tr d-ix="3"><td>083</td><td>Python 3.8 prerelease</td><td>240708T160948Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274022#274022">squarero</a></td></tr>
+<tr d-ix="0"><td>076</td><td>Python 3.8 prerelease</td><td>240708T160948Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274022#274022">squarero</a></td></tr>
+<tr d-ix="1"><td>030</td><td>sed r</td><td>240708T164928Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274026#274026">guest430</a></td></tr>
+<tr d-ix="2"><td>069</td><td>Python 3</td><td>240708T170630Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274027#274027">Mukundan</a></td></tr>
+<tr d-ix="3"><td>051</td><td>JavaScript ES6</td><td>240708T161437Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274023#274023">Arnauld</a></td></tr>
+<tr d-ix="4"><td>031</td><td>Perl 5 p</td><td>240708T162921Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274024#274024">Xcali</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed</a> -r, 30 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s> 89 </s> <s> 83 </s> 76 bytes</h1>
+<p><em>-6 bytes by walrusing</em> <code>'yuiophjklnm'</code><em>.</em><br />
+<em>-7 bytes by Mukundan314.</em></p>
+
+<pre class="lang-python prettyprint-override"><code>lambda x:x and all((i in(r:='yuiophjklnm'))^(j in r)for i,j in zip(x,x[1:]))
+</code></pre>
+<p><a href="https://tio.run/##HctLCsMwDADRq2hnCbIp3RRDTtIPuE1NlDiyUFxwcnmn7XJ4jG5lzHK@qLXY31oKy3MIUH2FIAOElBAZWNB877YPZx2nOcniiB44fQGMYjbg7h87K9auXk/@TtTUWApGdOv81sIvXn9fOwA" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed</a> -r, 30 bytes</h1>
 <pre><code>/[^h-puy]{2}|[h-puy]{2}|^$/IQ1
 </code></pre>
 <p><a href="https://tio.run/##K05N0U3PK/3/Xz86LkO3oLQyttqotiYawYxT0fcMNPz/vzg7@19@QUlmfl7xf90iAA" rel="nofollow noreferrer" title="sed – Try It Online">Try it online!</a></p>
 <p>nearly a port of <a href="https://codegolf.stackexchange.com/a/274024/119818">@Xcali's</a> answer. I originally had my own but my regex was worse. errors with exit code of 1 if it's invalid, exits normally if it's ping pong</p>
+<p>I just saw that we can use any keyboard we want, so here's my keyboard, colemak:</p>
+<h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed</a>, 30 bytes</h1>
+<pre><code>/[^eh-uy]{2}|[eh-uy]{2}|^$/IQ1
+</code></pre>
+<p><a href="https://tio.run/##K05N0U3PK/3/Xz86LjVDt7QyttqotiYawYxT0fcMNPz//19@QUlmfl7xf90iAA" rel="nofollow noreferrer" title="sed – Try It Online">Try it online!</a></p>
+<p>here's dvorak, the most popular alternate layout:</p>
+<h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed</a>, 42 bytes</h1>
+<pre><code>/[aeijkopquxy]{2}|[^aeijkopquxy]{2}|^$/IQ1
+</code></pre>
+<p><a href="https://tio.run/##K05N0U3PK/3/Xz86MTUzKzu/oLC0ojK22qi2JjoOXSRORd8z0PD//3/5BSWZ@XnF/3WLAA" rel="nofollow noreferrer" title="sed – Try It Online">Try it online!</a></p>
+<p>and here's workman, the third choice for weird people:</p>
+<h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed</a>, 40 bytes</h1>
+<pre><code>/[^efi-lnopuy]{2}|[efi-lnopuy]{2}|^$/IQ1
+</code></pre>
+<p><a href="https://tio.run/##K05N0U3PK/3/Xz86LjUtUzcnL7@gtDK22qi2JhqNH6ei7xlo@P//v/yCksz8vOL/ukUA" rel="nofollow noreferrer" title="sed – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1>JavaScript (ES6), 51 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 69 bytes</h1>
+<p>Takes input as a bytestring</p>
+
+<pre class="lang-python prettyprint-override"><code>lambda x:len({i%2^(j&amp;95in b'HIJKLMNOPUY')for i,j in enumerate(x)})==1
+</code></pre>
+<p><a href="https://tio.run/##dc1ta8IwEAfw9/0UR2AzgSp7YC8mdCDMbW7aytyQ4RxETfE0TbMmZcrYZ@/S6huxHiSB/P53p7d2marrIoYAPgvJk9mCw6YthaK/eHb1RVfntzeoYNZ46j2/9AdhNHz/aLA4zQD9FTgRKk9Exq2gG/bHguCyKFGiEqWm2k26YG0PXKHSPoiNdrsSrqmxWcsddJ9lvGW0REtJkzBWxXfJ6g6A2CwXxKsgza2DmLp5LaHm6ULQfYvOUFk6IQ@dXp/4QIad0YhMJ/sZrm/qQyZ0VrYy5807l3LfrDBroS3O0SRQVXP3lFu9bngfjQfd8A2O7TvnyqLdQo0t0GghAepszbd8beqNw2EdGK@1mEsjPCuMPYnj1yh8PNm5RPODUsYc5RECnN75Dw" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu3" class="pu"><h1>JavaScript (ES6), 51 bytes</h1>
 <p>Expects an array of characters. Returns <strong>0</strong> for <em>ping-pong</em> or <strong>1</strong> for <em>not ping-pong</em>.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>a=&gt;a&lt;1|a.some(q=c=&gt;q-(q=/[h-puy]/i.test(c)^(a^=1)))
@@ -51,19 +82,12 @@
 </code></pre>
 <p><a href="https://tio.run/##ddBNC4JAEAbge78ilg7rQYPudurjlEEIHUxhsDUnNzVnLST77fZBheF6G3h4mXnnCBegsMBcmWm2F01kN2RPx8Go9mIzLyv/NrnXXvCbx2gpQYqT0YRZSpkUlswOnDPPLUoVVz4zjEFbIs4oEbnCEOnEhsMuz53ZeruaO@5TNXwuIVWoqpdqeI@UC/lGHSdQQUK9DB/58uC/1C71FiBJ2wra2S6/vsT6ebtZO0vWn46RrihlBCg1u9tXP9PNAw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a> <code>-p</code>, 31 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a> <code>-p</code>, 31 bytes</h1>
 
 <pre class="lang-perl prettyprint-override"><code>$_&amp;&amp;=!/[h-puy]{2}|[^h-puy]{2}/i
 </code></pre>
 <p><a href="https://tio.run/##K0gtyjH9X6yvoKelr2/9XyVeTc1WUT86Q7egtDK22qi2JjoOztbP/P@/ODu1oCQzObM4VwEMdCFUSVFpKheXq5@Lf7ivq1@IAqZkYWliXklmSaUCFrmUzOKC1BwFBWxy2YmVidnF2OUSFVABilwiVrm0xJziVK6S1OISnJLhQf5@7jh1ZmQWl2fm5KQlZuZgSJ7bqoDb0n/5wIDLzyv@r@trqmdgaPBftyAHAA" rel="nofollow noreferrer" title="Perl 5 – Try It Online">Try it online!</a></p>
 <p>Assumes QWERTY layout.</p>
-</div>
-<div id="pu3" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s> 89 </s> 83 bytes</h1>
-<p><em>-6 bytes by walrusing</em> <code>'yuiophjklnm'</code><em>.</em></p>
-
-<pre class="lang-python prettyprint-override"><code>lambda x:x and all((x[i]in(r:='yuiophjklnm'))^(x[i+1]in r)for i in range(len(x)-1))
-</code></pre>
-<p><a href="https://tio.run/##FctNCoMwEEDhq8wuM5QupJsieJL@QKpJnRonQ4wQTx@b3YOPp0eeo9zumqofnjXY9TNZKH0BKxPYEBDLg18smPrBHDtHnX9LkNUQvRtduj9CIh8TMLS08nUYnGCha0dUNbFk9Gi2xWnmkbc21xM" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 </div>
 
 <table id="st">
